--- a/Dashboard/templates/area_status.html
+++ b/Dashboard/templates/area_status.html
@@ -35,7 +35,7 @@
         <!-- ============================================================== -->
         <div class="dashboard-wrapper">
             <div class="container-fluid dashboard-content">
-                <h1>MT AREA STATUS</h1>
+                <h1>AREA STATUS</h1>
                 <div class="row">
 
                     <div class="col-6">
@@ -106,7 +106,7 @@
                                 <img class="card-img-top img-fluid p-2" src="../assets/images/mango.jpg" alt="Card image cap">
                                 <div class="card-body">
                                     <h3 class="card-title">Mango Tree</h3>
-                                    <p class="card-text">Faucibus orci luctus et ultrices lorem posuere cubilia Cuquis ipsum in augue posuere congue.</p>
+                                    <p class="card-text">Post-harvest treatments are available for control of anthracnose in mango fruit. Prochloraz is used as a cold non-recirculating spray. Hot water dips used to control fruit flies will also control anthracnose and stem end rots. Hot benomyl dips will control anthracnose and are useful where stem end rots are a problem.</p>
                                     <a href="#" class="btn btn-primary">Read More</a>
                                 </div>
                             </div>
@@ -115,9 +115,10 @@
                             <div class="card">
                                 <img class="card-img-top img-fluid p-2" src="../assets/images/mango.jpg" alt="Card image cap">
                                 <div class="card-body">
-                                    <h3 class="card-title">Mango Tre</h3>
-                                    <p class="card-text">Faucibus orci luctus et ultrices lorem posuere cubilia Cuquis ipsum in augue posuere congue.</p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    <h3 class="card-title">Mango Tree</h3>
+                                    <p class="card-text">Post-harvest treatments are available for control of anthracnose in mango fruit. Prochloraz is used as a cold
+                                    non-recirculating spray. Hot water dips used to control fruit flies will also control anthracnose and stem end rots. Hot benomyl dips will control anthracnose and are useful where stem end rots are a problem.</p>
+                                    <a href="#" class="btn btn-primary">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -125,9 +126,11 @@
                             <div class="card">
                                 <img class="card-img-top img-fluid p-2" src="../assets/images/mango.jpg" alt="Card image cap">
                                 <div class="card-body">
-                                    <h3 class="card-title">Mango Tre</h3>
-                                    <p class="card-text">Faucibus orci luctus et ultrices lorem posuere cubilia Cuquis ipsum in augue posuere congue.</p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    <h3 class="card-title">Mango Tree</h3>
+                                    <p class="card-text">Post-harvest treatments are available for control of anthracnose in mango fruit. Prochloraz is used as a cold
+                                    non-recirculating spray. Hot water dips used to control fruit flies will also control anthracnose and stem end rots. Hot
+                                    benomyl dips will control anthracnose and are useful where stem end rots are a problem.</p>
+                                    <a href="#" class="btn btn-primary">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -135,9 +138,11 @@
                             <div class="card">
                                 <img class="card-img-top img-fluid p-2" src="../assets/images/mango.jpg" alt="Card image cap">
                                 <div class="card-body">
-                                    <h3 class="card-title">Mango Tre</h3>
-                                    <p class="card-text">Faucibus orci luctus et ultrices lorem posuere cubilia Cuquis ipsum in augue posuere congue.</p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    <h3 class="card-title">Mango Tree</h3>
+                                    <p class="card-text">Post-harvest treatments are available for control of anthracnose in mango fruit. Prochloraz is used as a cold
+                                    non-recirculating spray. Hot water dips used to control fruit flies will also control anthracnose and stem end rots. Hot
+                                    benomyl dips will control anthracnose and are useful where stem end rots are a problem.</p>
+                                    <a href="#" class="btn btn-primary">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -153,8 +158,8 @@
                             <div class="row">
                                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                                     <div class="page-header">
-                                        <h1 class="pageheader-title">Deatil Information </h1>
-                                        <p class="pageheader-text">Nulla euismod urna eros, sit amet scelerisque torton lectus vel mauris facilisis faucibus at enim quis massa lobortis rutrum.</p>
+                                        <h1 class="pageheader-title">Detail Information </h1>
+                                        <p class="pageheader-text"></p>
                                         <div class="page-breadcrumb">
                                             <nav aria-label="breadcrumb">
                                                 <ol class="breadcrumb">
@@ -176,7 +181,7 @@
                                              <a class="pt-2 d-inline-block" href="index.html">Table-Mango Tree</a>
                                            
                                             <div class="float-right"> <h3 class="mb-0">Mango Tree</h3>
-                                            Date: 3 Dec, 2020</div>
+                                            Date: 3 July, 2022</div>
                                         </div>
                                         <div class="card-body">
                                             <div class="row mb-4">
@@ -185,9 +190,9 @@
                                                     <h3 class="text-dark mb-1">Rajshahi</h3>
                                                  
                                                     <div>Area-1, Rajshahi</div>
-                                                    <div>Officer: MD S M Ahmed</div>
-                                                    <div>Email: info@gerald.com.pl</div>
-                                                    <div>Phone: +573-282-9117</div>
+                                                    <div>Officer: Tamim</div>
+                                                    <div>Email: ti28@gmail.com</div>
+                                                    
                                                 </div>
                     
                                             </div>
@@ -195,51 +200,49 @@
                                                 <table class="table table-striped">
                                                     <thead>
                                                         <tr>
-                                                            <th class="center">Serial</th>
+                                                            <th class="center">Area ID</th>
                                                             <th>Item</th>
-                                                            <th>Description</th>
-                                                            <th class="right">Unit Cost</th>
-                                                            <th class="center">Qty</th>
-                                                            <th class="right">Total</th>
+                                                            <th>Trees in total</th>
+                                                            <th class="right">Total Mangoes from trees</th>
+                                                          
                                                         </tr>
                                                     </thead>
                                                     <tbody>
                                                         <tr>
-                                                            <td class="center">1</td>
-                                                            <td class="left strong">Origin License</td>
-                                                            <td class="left">Extended License</td>
-                                                            <td class="right">$1500,00</td>
-                                                            <td class="center">1</td>
-                                                            <td class="right">$1500,00</td>
+                                                            <td class="center">1245</td>
+                                                            <td class="left strong">Mango</td>
+                                                            <td class="left">160</td>
+                                                            <td class="right">15000</td>
+                                                            
                                                         </tr>
                                                         <tr>
-                                                            <td class="center">2</td>
-                                                            <td class="left">Custom Services</td>
-                                                            <td class="left">Instalation and Customization (cost per hour)</td>
-                                                            <td class="right">$110,00</td>
-                                                            <td class="center">20</td>
-                                                            <td class="right">$22.000,00</td>
+                                                            <td class="center">1233</td>
+                                                            <td class="left">Mango</td>
+                                                            <td class="left">130</td>
+                                                            <td class="right">11000</td>
+                                                            
+                                                           
                                                         </tr>
                                                         <tr>
-                                                            <td class="center">3</td>
-                                                            <td class="left">Hosting</td>
-                                                            <td class="left">1 year subcription</td>
-                                                            <td class="right">$309,00</td>
-                                                            <td class="center">1</td>
-                                                            <td class="right">$309,00</td>
+                                                            <td class="center">1273</td>
+                                                            <td class="left">Mango</td>
+                                                            <td class="left">125</td>
+                                                            <td class="right">10900</td>
+                                                            
+                                                            
                                                         </tr>
                                                         <tr>
-                                                            <td class="center">4</td>
-                                                            <td class="left">Platinum Support</td>
-                                                            <td class="left">1 year subcription 24/7</td>
-                                                            <td class="right">$5.000,00</td>
-                                                            <td class="center">1</td>
-                                                            <td class="right">$5.000,00</td>
+                                                            <td class="center">1294</td>
+                                                            <td class="left">Mango</td>
+                                                            <td class="left">108</td>
+                                                            <td class="right">8000</td>
+                                                            
+                                                           
                                                         </tr>
                                                     </tbody>
                                                 </table>
                                             </div>
-                                            <div class="row">
+                                            <!-- <div class="row">
                                                 <div class="col-lg-4 col-sm-5">
                                                 </div>
                                                 <div class="col-lg-4 col-sm-5 ml-auto">
@@ -273,12 +276,10 @@
                                                             </tr>
                                                         </tbody>
                                                     </table>
-                                                </div>
+                                                </div> -->
                                             </div>
                                         </div>
-                                        <div class="card-footer bg-white">
-                                            <p class="mb-0">2983 Glenview Drive Corpus Christi, TX 78476</p>
-                                        </div>
+                                       
                                     </div>
                                 </div>
                             </div>
