--- a/Dashboard/templates/result.html
+++ b/Dashboard/templates/result.html
@@ -112,7 +112,7 @@
                                 <p id="iddd">1620</p>
                                 <br>
                                 <h2>Disease Name :</h2>
-                                <p id="nameee">Yellow Leaf</p>
+                                <p id="nameee">Mango Anthracnose</p>
                                 <br>
                                 <h2>Symptoms:</h2>
                                 <ul id="items1" class="list-group">
