--- a/Dashboard/templates/index.html
+++ b/Dashboard/templates/index.html
@@ -154,10 +154,10 @@
                                         </div>
                                         <!-- cd-timeline__img -->
                                         <div class="cd-timeline__content js-cd-content">
-                                            <h3>Title of section 1</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                                            <h3>Meherpur Section 1</h3>
+                                            <p>30 percent of Mango trees have Phoma Blight disease. Need to give herbicides</p>
                                             <a href="#0" class="btn btn-primary btn-lg">Read More</a>
-                                            <span class="cd-timeline__date">12 July, 2016</span>
+                                            <span class="cd-timeline__date">2 July, 2022</span>
                                         </div>
                                         <!-- cd-timeline__content -->
                                     </div>
@@ -168,10 +168,10 @@
                                         </div>
                                         <!-- cd-timeline__img -->
                                         <div class="cd-timeline__content js-cd-content">
-                                            <h3>Title of section 2</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
+                                            <h3>Meherpur Section 2</h3>
+                                            <p>20 percent of the mango trees have Mango Anthracnose disaease. Need to give herbicides</p>
                                          <a href="#0" class="btn btn-primary btn-lg">Read More</a>
-                                            <span class="cd-timeline__date">20 July, 2017</span>
+                                            <span class="cd-timeline__date">20 June, 2022</span>
                                         </div>
                                         <!-- cd-timeline__content -->
                                     </div>
@@ -182,10 +182,10 @@
                                         </div>
                                         <!-- cd-timeline__img -->
                                         <div class="cd-timeline__content js-cd-content">
-                                            <h3>Title of section 3</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
+                                            <h3>Rangpur Section 1</h3>
+                                            <p>70 percent of the mangoes in the trees have Sooty Mould. Need to send an officer to inspect the land and give herbicides.</p>
                                           <a href="#0" class="btn btn-primary btn-lg">Read More</a>
-                                            <span class="cd-timeline__date">24 July, 2018</span>
+                                            <span class="cd-timeline__date">24 March, 2022</span>
                                         </div>
                                         <!-- cd-timeline__content -->
                                     </div>
@@ -196,10 +196,10 @@
                                         </div>
                                         <!-- cd-timeline__img -->
                                         <div class="cd-timeline__content js-cd-content">
-                                            <h3>Title of section 4</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                                            <h3>Rangpur section 2</h3>
+                                            <p>10 percent of the mangoes in the trees have Sooty Mould. Need to send an officer to inspect the land and give herbicides.</p>
                                          <a href="#0" class="btn btn-primary btn-lg">Read More</a>
-                                            <span class="cd-timeline__date">12 September, 2018</span>
+                                            <span class="cd-timeline__date">12 january, 2022</span>
                                         </div>
                                         <!-- cd-timeline__content -->
                                     </div>
@@ -210,11 +210,11 @@
                                         </div>
                                         <!-- cd-timeline__img -->
                                         <div class="cd-timeline__content js-cd-content">
-                                            <h3>Title of section 5</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
+                                            <h3>Khulna section 5</h3>
+                                            <p>7 percent of the mangoes in the trees have Sooty Mould. Need to send an officer to inspect the land.</p>
                                          <a href="#0" class="btn btn-primary btn-lg">Read More</a>
                                            
-                                            <span class="cd-timeline__date">20 September, 2018</span>
+                                            <span class="cd-timeline__date">20 September, 2021</span>
                                         </div>
                                         <!-- cd-timeline__content -->
                                     </div>
@@ -225,9 +225,9 @@
                                         </div>
                                         <!-- cd-timeline__img -->
                                         <div class="cd-timeline__content js-cd-content">
-                                            <h3>Final Section</h3>
-                                            <p>This is the content of the last section</p>
-                                            <span class="cd-timeline__date">1 October, 2018</span>
+                                            <h3>Jessore Section 4</h3>
+                                            <p>8 percent of the mangoes in the trees have Sooty Mould. Need to send an officer to inspect the land.</p>
+                                            <span class="cd-timeline__date">1 October, 2020</span>
                                         </div>
                                         <!-- cd-timeline__content -->
                                     </div>
