--- a/Dashboard/templates/area_status.html
+++ b/Dashboard/templates/area_status.html
@@ -37,7 +37,7 @@
             <div class="container-fluid dashboard-content">
                 <h1>AREA STATUS</h1>
                 <div class="row">
-
+<!-- 
                     <div class="col-6">
                         <div class="input-group mb-3">
                             <div class="input-group-prepend be-addon">
@@ -50,7 +50,7 @@
                             </div>
                             <input type="text" class="form-control">
                         </div>
-                    </div>
+                    </div> -->
                     
 
                         <div class="col-xl-11 col-lg-12 col-md-6 col-sm-12 col-12">
@@ -103,7 +103,7 @@
                         
                         <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
                             <div class="card">
-                                <img class="card-img-top img-fluid p-2" src="../assets/images/mango.jpg" alt="Card image cap">
+                                <img class="card-img-top img-fluid p-2" src="../assets/images/mango1.jpeg" alt="Card image cap">
                                 <div class="card-body">
                                     <h3 class="card-title">Mango Tree</h3>
                                     <p class="card-text">Post-harvest treatments are available for control of anthracnose in mango fruit. Prochloraz is used as a cold non-recirculating spray. Hot water dips used to control fruit flies will also control anthracnose and stem end rots. Hot benomyl dips will control anthracnose and are useful where stem end rots are a problem.</p>
@@ -113,7 +113,7 @@
                         </div>
                         <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
                             <div class="card">
-                                <img class="card-img-top img-fluid p-2" src="../assets/images/mango.jpg" alt="Card image cap">
+                                <img class="card-img-top img-fluid p-2" src="../assets/images/mango2.jpeg" alt="Card image cap">
                                 <div class="card-body">
                                     <h3 class="card-title">Mango Tree</h3>
                                     <p class="card-text">Post-harvest treatments are available for control of anthracnose in mango fruit. Prochloraz is used as a cold
@@ -124,7 +124,7 @@
                         </div>
                         <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
                             <div class="card">
-                                <img class="card-img-top img-fluid p-2" src="../assets/images/mango.jpg" alt="Card image cap">
+                                <img class="card-img-top img-fluid p-2" src="../assets/images/mango4.jpeg" alt="Card image cap">
                                 <div class="card-body">
                                     <h3 class="card-title">Mango Tree</h3>
                                     <p class="card-text">Post-harvest treatments are available for control of anthracnose in mango fruit. Prochloraz is used as a cold
@@ -136,7 +136,7 @@
                         </div>
                         <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
                             <div class="card">
-                                <img class="card-img-top img-fluid p-2" src="../assets/images/mango.jpg" alt="Card image cap">
+                                <img class="card-img-top img-fluid p-2" src="../assets/images/mango3.jpeg" alt="Card image cap">
                                 <div class="card-body">
                                     <h3 class="card-title">Mango Tree</h3>
                                     <p class="card-text">Post-harvest treatments are available for control of anthracnose in mango fruit. Prochloraz is used as a cold
